tests/snapshots/conformance__n_string_escaped_backslash_bad.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\\\"]
stdout --- 
<empty>
stderr --- 
error: expected quote before end of input
 --> stdin:1:7
  |
1 | ["\\\"]
  |       ^
