tests/snapshots/conformance__n_string_start_escape_unclosed.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\
stdout --- 
<empty>
stderr --- 
error: expected escapable sequence, found no significant characters.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:3
  |
1 | ["\
  |   ^
